2012-05-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.c: Support FREE_STANDING environment as well as
	under ChibiOS/RT.
	(usb_lld_init): Call usb_lld_sys_init.  Don't call user defined
	method.  Call usb_lld_set_configuration.
	(usb_lld_shutdown): Call usb_lld_sys_shutdown.
	(Vector90): Move to usb_lld_sys.c.
	(usb_interrupt_handler): Export to global.

	* src/usb_lld_sys.c: New.

	* src/usb_prop.c (Device_Method): Remove gnuk_device_init.
	(gnuk_device_init): Remove.

2012-05-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.c (handle_datastage_in): Bug fix, erable RX when
	sending ZLP.  It will be possible to get OUT transaction soon
	after IN transaction.

2012-05-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.c (handle_datastage_out): Fix rx copying.
	(handle_setup0): Bug fix not stalling TX, it will be possible
	to go IN transaction, soon after OUT transaction.

	* src/usb_lld.h (USB_SETUP_SET, USB_SETUP_GET): New.
	(usb_device_method.ctrl_write_finish): New.
	(usb_device_method.setup): Merge setup_with_data, and
	setup_with_nodata.

	* src/usb_lld.c (usb_lld_shutdown, usb_lld_prepare_shutdown): New.
	(handle_setup0): Call ->setup.
	(handle_in0): Call ->ctrl_write_finish.

	* src/usb_prop.c (vcom_port_data_setup): Merge
	vcom_port_setup_with_nodata.
	(download_check_crc32): New.
	(gnuk_setup): Merge gnuk_setup_with_data and
	gnuk_setup_with_nodata.
	(gnuk_ctrl_write_finish): New.

2012-05-17  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_upgrade.py: New tool.

	* src/gnuk.h (ICC_STATE_EXITED, ICC_STATE_EXEC_REQUESTED): New.

	* src/openpgp.c (INS_EXTERNAL_AUTHENTICATE)
	(cmd_external_authenticate): New.
	(INS_GET_CHALLENGE, cmd_get_challenge): New.

	* src/usb-icc.c (USBthread): Finish the thread with
	ICC_STATE_EXITED, after EXTERNAL_AUTHENTICATE.

	* src/usb_prop.c (gnuk_setup_endpoints_for_interface): Add STOP
	argument.
	(gnuk_usb_event): Disable all endpoints when configure(0).
	(vcom_port_data_setup): Check direction and support